--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,14 +5,14 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-2.25MB/s(Youtube:不良林), server: 85.208.108.58, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-1.13MB/s(Youtube:不良林), server: 38.64.138.145, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇺🇸 美国-2.03MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
-  - {name: 🇺🇸 美国-927.9KB/s(Youtube:不良林), server: 38.68.134.85, port: 5600, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-1.38MB/s(Youtube:不良林), server: 38.68.135.18, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-2.32MB/s(Youtube:不良林), server: 38.114.114.67, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
-  - {name: 🇺🇸 美国-2.39MB/s(Youtube:不良林), server: 38.114.114.49, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇺🇸 美国-2.51MB/s(Youtube:不良林), server: 38.75.136.102, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 波兰-1.45MB/s(Youtube:不良林), server: 217.30.10.65, port: 9011, type: ss, cipher: aes-256-cfb, password: M3t2ZEQcMGRWBjRa}
+  - {name: 🇺🇸 美国-2.65MB/s(Youtube:不良林), server: 51.81.223.22, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-2.98MB/s(Youtube:不良林), server: 85.208.108.20, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇯🇵 日本-3.40MB/s(Youtube:不良林), server: 85.208.108.93, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇳🇱 荷兰-1.53MB/s(Youtube:不良林), server: 213.183.51.171, port: 9010, type: ss, cipher: aes-256-cfb, password: f63gg8EruDnUrmz4}
+  - {name: 🇺🇸 美国-178.5KB/s(Youtube:不良林), server: 38.114.114.67, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
+  - {name: 🇺🇸 美国-1.56MB/s(Youtube:不良林), server: 38.114.114.49, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇺🇸 美国-1.36MB/s(Youtube:不良林), server: 38.75.136.102, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-2.15MB/s(Youtube:不良林), server: 38.114.114.67, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
   - {name: 🇺🇸 美国-1.47MB/s(Youtube:不良林), server: 38.114.114.19, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
 proxy-groups:
@@ -21,14 +21,14 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-2.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-927.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
+      - 波兰-1.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.98MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.40MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-178.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
@@ -36,14 +36,14 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-2.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-927.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
+      - 波兰-1.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.98MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.40MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-178.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
@@ -52,14 +52,14 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-2.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-927.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
+      - 波兰-1.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.98MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.40MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-178.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
@@ -72,14 +72,14 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-2.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-927.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
+      - 波兰-1.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.98MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.40MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-178.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
   - name: 📲 电报信息
@@ -87,14 +87,14 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-2.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-927.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
+      - 波兰-1.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.98MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.40MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-178.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
@@ -103,14 +103,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-2.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-927.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
+      - 波兰-1.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.98MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.40MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-178.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
   - name: 🎯 全球直连
@@ -128,14 +128,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-2.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-927.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
+      - 波兰-1.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.98MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.40MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-178.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
 rules:
