--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 波兰-1.45MB/s(Youtube:不良林), server: 217.30.10.65, port: 9011, type: ss, cipher: aes-256-cfb, password: M3t2ZEQcMGRWBjRa}
-  - {name: 🇺🇸 美国-2.65MB/s(Youtube:不良林), server: 51.81.223.22, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-2.98MB/s(Youtube:不良林), server: 85.208.108.20, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇯🇵 日本-3.40MB/s(Youtube:不良林), server: 85.208.108.93, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇳🇱 荷兰-1.53MB/s(Youtube:不良林), server: 213.183.51.171, port: 9010, type: ss, cipher: aes-256-cfb, password: f63gg8EruDnUrmz4}
+  - {name: 🇯🇵 日本-1.32MB/s(Youtube:不良林), server: 85.208.108.93, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇺🇸 美国-1.70MB/s(Youtube:不良林), server: 38.143.66.99, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇷🇺 俄罗斯联邦-907.3KB/s(Youtube:不良林), server: 213.183.53.208, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
+  - {name: 🇺🇸 美国-352.0KB/s(Youtube:不良林), server: 625us.ok365.cyou, port: 443, type: trojan, password: 4b0a60e7-4975-43e8-b9b0-1d156ce98693, sni: 625us.ok365.cyou, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.13MB/s(Youtube:不良林), server: 38.64.138.145, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
   - {name: 🇺🇸 美国-178.5KB/s(Youtube:不良林), server: 38.114.114.67, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
   - {name: 🇺🇸 美国-1.56MB/s(Youtube:不良林), server: 38.114.114.49, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
   - {name: 🇺🇸 美国-1.36MB/s(Youtube:不良林), server: 38.75.136.102, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 波兰-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.98MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.40MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.53MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-907.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-352.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
       - 🇺🇸 美国-178.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 波兰-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.98MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.40MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.53MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-907.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-352.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
       - 🇺🇸 美国-178.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 波兰-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.98MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.40MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.53MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-907.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-352.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
       - 🇺🇸 美国-178.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 波兰-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.98MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.40MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.53MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-907.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-352.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
       - 🇺🇸 美国-178.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 波兰-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.98MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.40MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.53MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-907.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-352.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
       - 🇺🇸 美国-178.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 波兰-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.98MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.40MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.53MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-907.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-352.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
       - 🇺🇸 美国-178.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 波兰-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.98MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.40MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.53MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-907.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-352.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
       - 🇺🇸 美国-178.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
