--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,12 +5,12 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-1.32MB/s(Youtube:不良林), server: 85.208.108.93, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-1.70MB/s(Youtube:不良林), server: 38.143.66.99, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇷🇺 俄罗斯联邦-907.3KB/s(Youtube:不良林), server: 213.183.53.208, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
-  - {name: 🇺🇸 美国-352.0KB/s(Youtube:不良林), server: 625us.ok365.cyou, port: 443, type: trojan, password: 4b0a60e7-4975-43e8-b9b0-1d156ce98693, sni: 625us.ok365.cyou, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.13MB/s(Youtube:不良林), server: 38.64.138.145, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇺🇸 美国-178.5KB/s(Youtube:不良林), server: 38.114.114.67, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
+  - {name: 🇺🇸 美国-346.4KB/s(Youtube:不良林), server: 38.143.66.20, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇺🇸 美国-854.5KB/s(Youtube:不良林), server: 38.114.114.49, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇯🇵 日本-1.32MB/s(Youtube:不良林), server: 85.208.108.93, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 波兰-880.1KB/s(Youtube:不良林), server: 217.30.10.65, port: 9038, type: ss, cipher: aes-256-cfb, password: gYCYXfkUQEs2TaJQ}
+  - {name: 🇺🇸 美国-1.06MB/s(Youtube:不良林), server: 38.114.114.67, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
   - {name: 🇺🇸 美国-1.56MB/s(Youtube:不良林), server: 38.114.114.49, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
   - {name: 🇺🇸 美国-1.36MB/s(Youtube:不良林), server: 38.75.136.102, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-2.15MB/s(Youtube:不良林), server: 38.114.114.67, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
@@ -21,12 +21,12 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-907.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-352.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-178.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-346.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-854.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.32MB/s(Youtube:不良林)
+      - 波兰-880.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
@@ -36,12 +36,12 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-907.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-352.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-178.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-346.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-854.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.32MB/s(Youtube:不良林)
+      - 波兰-880.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
@@ -52,12 +52,12 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-907.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-352.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-178.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-346.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-854.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.32MB/s(Youtube:不良林)
+      - 波兰-880.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
@@ -72,12 +72,12 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-907.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-352.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-178.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-346.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-854.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.32MB/s(Youtube:不良林)
+      - 波兰-880.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
@@ -87,12 +87,12 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-907.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-352.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-178.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-346.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-854.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.32MB/s(Youtube:不良林)
+      - 波兰-880.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
@@ -103,12 +103,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-907.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-352.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-178.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-346.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-854.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.32MB/s(Youtube:不良林)
+      - 波兰-880.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
@@ -128,12 +128,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-907.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-352.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-178.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-346.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-854.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.32MB/s(Youtube:不良林)
+      - 波兰-880.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
